# tic-tac-toe

./: CMakeLists.txt  README.md
src/: board.cxx  board.hxx  controller.cxx  controller.hxx  model.cxx  model.hxx  move.cxx  move.hxx  player.cxx  tic_tac_toe.cxx  view.cxx  view.hxx
test/: board_test.cxx  model_test.cxx
